@startuml

title __CELLBUILDER's Class Diagram__\n


        abstract class gameLogic.cellBuilder.CellBuilder {
            # endX : int
            # endY : int
            {abstract} + build()
            + setEndCellPosition()
            + setMaze()
        }



        class gameLogic.cellBuilder.CellWithCoinBuilder {
            - coinsNumber : int
            + build()
            + setCoinsNumber()
        }

  

  gameLogic.cellBuilder.CellBuilder o-- gameLogic.Maze : maze
  gameLogic.cellBuilder.CellWithCoinBuilder -up-|> gameLogic.cellBuilder.CellBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
